Completed 1.8-1.18 support and added customization features.