@@ -4,6 +4,7 @@ import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
 import org.mineacademy.fo.settings.SimpleLocalization;
 
+import java.util.Collections;
 import java.util.List;
 
 @SuppressWarnings("unused")
@@ -16,7 +17,7 @@ public class Localization extends SimpleLocalization {
 
 	@Override
 	protected List<String> getUncommentedSections() {
-		return List.of("Welcome");
+		return Collections.singletonList( "Welcome");
 	}
 
 	@NoArgsConstructor(access = AccessLevel.PRIVATE)
